<resources>
    <string name="app_name">Court Counter</string>
    <string name="team1">Team A</string>
    <string name="team2">Team B</string>
    <string name="P3">+3 Points</string>
    <string name="P2">+2 Points</string>
    <string name="PF">Free Throw</string>
    <string name="scoreA">0</string>
    <string name="clrA">Clear</string>
    <string name="scoreB">0</string>
    <string name="clrB">Clear</string>
    <string name="res">Reset</string>

</resources>
